作业一华为完成提交

--- a/作业一：华为首页(响应式)/index.html
+++ b/作业一：华为首页(响应式)/index.html
@@ -9,7 +9,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>华为首页(移动端)</title>
     <link rel="stylesheet" href="./css/index.css" />
-    <!-- <script src="./js/setrem.js"></script> -->
+    <!-- 引入媒体查询960px -->
+    <link
+      rel="stylesheet"
+      href="./css/media960.css"
+      media="all and (max-width:960px)"
+    />
+    <!-- 引入媒体查询720px -->
+    <link
+      rel="stylesheet"
+      href="./css/media720.css"
+      media="all and (max-width:720px)"
+    />
   </head>
 
   <body>
@@ -46,6 +57,56 @@
       </a>
     </div>
     <!-- 主体部分 -->
-    <main class="clearfix" id="content"></main>
+    <main class="clearfix" id="contentone">
+      <div class="left">
+        <img src="./img/huawei01.jpg" alt="" />
+        <a href="#">孟加拉bKash：移动支付带来便利生活</a>
+        <p>
+          bKash作为BRAC银行的合资子公司，为孟加拉人提供移动金融服务。bKash简化货币从城市转移到农村的方式，为孟加拉国经济发展做出关键贡献，并持续改变当地人的生活方式。
+        </p>
+      </div>
+      <!-- 中间 -->
+      <div class="middle">
+        <img src="./img/huawei02.jpg" alt="" />
+        <a href="#">孟加拉bKash：移动支付带来便利生活</a>
+        <p>
+          bKash作为BRAC银行的合资子公司，为孟加拉人提供移动金融服务。bKash简化货币从城市转移到农村的方式，为孟加拉国经济发展做出关键贡献，并持续改变当地人的生活方式。
+        </p>
+      </div>
+      <!-- 右边 -->
+      <div class="right">
+        <img src="./img/huawei03.jpg" alt="" />
+        <a href="#">孟加拉bKash：移动支付带来便利生活</a>
+        <p>
+          bKash作为BRAC银行的合资子公司，为孟加拉人提供移动金融服务。bKash简化货币从城市转移到农村的方式，为孟加拉国经济发展做出关键贡献，并持续改变当地人的生活方式。
+        </p>
+      </div>
+    </main>
+    <!--主体大图版 -->
+    <main class="clearfix" id="contentTwo">
+      <div class="leftTwo">
+        <img src="./img/huawei01.jpg" alt="" />
+        <a href="#">孟加拉bKash：移动支付带来便利生活</a>
+        <p>
+          bKash作为BRAC银行的合资子公司，为孟加拉人提供移动金融服务。bKash简化货币从城市转移到农村的方式，为孟加拉国经济发展做出关键贡献，并持续改变当地人的生活方式。
+        </p>
+      </div>
+      <!-- 中间 -->
+      <div class="middleTwo">
+        <img src="./img/huawei02.jpg" alt="" />
+        <a href="#">孟加拉bKash：移动支付带来便利生活</a>
+        <p>
+          bKash作为BRAC银行的合资子公司，为孟加拉人提供移动金融服务。bKash简化货币从城市转移到农村的方式，为孟加拉国经济发展做出关键贡献，并持续改变当地人的生活方式。
+        </p>
+      </div>
+      <!-- 右边 -->
+      <div class="rightTwo">
+        <img src="./img/huawei03.jpg" alt="" />
+        <a href="#">孟加拉bKash：移动支付带来便利生活</a>
+        <p>
+          bKash作为BRAC银行的合资子公司，为孟加拉人提供移动金融服务。bKash简化货币从城市转移到农村的方式，为孟加拉国经济发展做出关键贡献，并持续改变当地人的生活方式。
+        </p>
+      </div>
+    </main>
   </body>
 </html>
