作业二boss头部完成提交

--- a/作业二：boss直聘移动首页/index.html
+++ b/作业二：boss直聘移动首页/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Boss直聘</title>
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="./js/setrem.js"></script>
   </head>
-  <body></body>
+
+  <body>
+    <!-- 头部 -->
+    <div class="box">
+      <a href="#"></a>
+      <!-- 搜索栏 -->
+      <div class="search">
+        <input type="search" placeholder="搜索职位/公司" />
+        <a href="#">搜索</a>
+      </div>
+    </div>
+  </body>
 </html>
