作业二Boss直聘完成提交

--- a/作业二：boss直聘移动首页/index.html
+++ b/作业二：boss直聘移动首页/index.html
@@ -22,5 +22,72 @@
         <a href="#">搜索</a>
       </div>
     </div>
+    <!-- 主体部分 -->
+    <div class="main">
+      <dl>
+        <dt>
+          <img src="./images/technology.png" alt="" />
+          <h1>技术</h1>
+        </dt>
+        <dd>
+          <a href="#">Java</a>
+          <a href="#">PHP</a>
+          <a href="#">Web前端</a>
+          <a href="#">数据挖掘</a>
+          <a href="#">C++</a>
+          <a href="#">Python</a>
+          <a href="#">Android</a>
+          <a href="#">iOS</a>
+        </dd>
+      </dl>
+      <dl>
+        <dt>
+          <img src="./images/product.png" alt="" />
+          <h1>产品</h1>
+        </dt>
+        <dd>
+          <a href="#">产品经理</a>
+          <a href="#">产品助理</a>
+          <a href="#">网页产品经理</a>
+          <a href="#">数据产品经理</a>
+        </dd>
+      </dl>
+      <dl>
+        <dt>
+          <img src="./images/designer.png" alt="" />
+          <h1>设计</h1>
+        </dt>
+        <dd>
+          <a href="#">UI设计师</a>
+          <a href="#">平面设计师</a>
+          <a href="#">交互设计师</a>
+          <a href="#">设计总监</a>
+        </dd>
+      </dl>
+      <dl>
+        <dt>
+          <img src="./images/market.png" alt="" />
+          <h1>市场</h1>
+        </dt>
+        <dd>
+          <a href="#">市场营销</a>
+          <a href="#">商务渠道</a>
+          <a href="#">品牌公关</a>
+          <a href="#">市场总监</a>
+          <a href="#">策划经理</a>
+          <a href="#">活动策划</a>
+          <a href="#">SEO</a>
+          <a href="#">SEM</a>
+        </dd>
+      </dl>
+      <!-- 立即注册 -->
+      <div class="login">
+        <a href="#">立即注册</a>
+        <div class="text">
+          <img src="./images/logo-x.png" alt="" />
+          <p>找工作要跟<br />老板谈</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
