作业三jd首页完成提交

--- a/作业三：jd移动首页/index.html
+++ b/作业三：jd移动首页/index.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>jd首页</title>
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="./js/setrem.js"></script>
   </head>
-  <body></body>
+
+  <body>
+    <!-- 头部 -->
+    <div class="box">
+      <header>
+        <div class="top">
+          <span href="#">登录</span>
+          <input type="search" placeholder="格兰仕 微波炉" />
+          <a href="#" class="logo"></a>
+          <a href="#" class="search"></a>
+        </div>
+        <img src="./images/pic.jpg" alt="" />
+        <!-- 主体 -->
+        <main>
+          <ul>
+            <li>
+              <a href="#">
+                <img src="./images/nav0.png" alt="" />
+                <p>分类查询</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/nav1.png" alt="" />
+                <p>物流查询</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/nav2.png" alt="" />
+                <p>购物车</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/nav3.png" alt="" />
+                <p>我的京东</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/nav4.png" alt="" />
+                <p>京东生鲜</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/nav5.png" alt="" />
+                <p>领券中心</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/nav6.png" alt="" />
+                <p>京东超市</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/nav7.png" alt="" />
+                <p>我的关注</p>
+              </a>
+            </li>
+          </ul>
+        </main>
+      </header>
+    </div>
+  </body>
 </html>
